
[package]
name = "paypeer"
version = "0.0.1"
edition = "2021"
license = "mit"
publish = false

authors = ["ajibola ojo <hey@ajibolaojo.com>"]
description = """
The purpose of this contract is to create a stable curve based pool for swaps on solana.

reference math:
  - [Understanding StableSwap Curve](https://miguelmota.com/blog/understanding-stableswap-curve/)
"""
homepage = "https://github.com/jbrit/"
repository = "https://github.com/jbrit/rspaypeer"

[dependencies]
solana-program = ">=1.14, <1.17"
borsh = "0.10.3"
thiserror = "1"
num-derive = "0.4"
num-traits = "0.2"
num_enum = "0.7.0"
assert_matches = {version = "~1.5.0", optional = true}
solana-logger = {version = ">=1.14, <1.17", optional = true}
solana-program-test = {version = ">=1.14, <1.17", optional = true}
solana-sdk = {version = ">=1.14, <1.17", optional = true}
solana-validator = {version = ">=1.14, <1.17", optional = true}
solana-rpc-client = {version = ">=1.14, <1.17", optional = true}
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }



[features]
test-sbf = [
    "assert_matches",
    "solana-sdk/default",
    "solana-logger",
    "solana-program-test",
    "solana-validator",
    "solana-rpc-client"
]

[lib]
crate-type = ["cdylib", "lib"]
path = "./lib.rs"
